cluster/homelab/apps/website/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: website
    namespace: website
    annotations:
        kubernetes.io/ingress.class: "nginx"
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: My Website
        gethomepage.dev/group: Personal
        gethomepage.dev/name: Website
