cluster/homelab/apps/website/deny-local-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: website-allow-dns-egress
  namespace: website
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8   # RFC 1918 - Class A private
        - 172.16.0.0/12 # RFC 1918 - Class B private
        - 192.168.0.0/16 # RFC 1918 - Class C private
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
